{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 10,
  "lineage": "4515e0cc-da7d-4b53-b255-de8a3649e9c8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ivan_SG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097084951758:security-group/sg-013f664f7e9f1152b",
            "description": "SG for exxampe number 2",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "ivan_SG2"
                ]
              }
            ],
            "id": "sg-013f664f7e9f1152b",
            "name": "ivan_SG2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d326fa6df054880c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:097084951758:instance/i-0dd10c8e32dd043c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd10c8e32dd043c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0efbf11f82dcf08ce",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.221",
            "public_ip": "44.221.81.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02782692b850f87bb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e6cfd23d3e89afc",
            "tags": {
              "Name": "ivan_instance2"
            },
            "tags_all": {
              "Name": "ivan_instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013f664f7e9f1152b"
            ]
          },
          "dependencies": [
            "aws_security_group.ivan_SG2",
            "aws_subnet.public",
            "aws_vpc.ivan_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_Ivan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097084951758:internet-gateway/igw-035bd17664caba179",
            "id": "igw-035bd17664caba179",
            "owner_id": "097084951758",
            "tags": {
              "Name": "IGW_Ivan"
            },
            "tags_all": {
              "Name": "IGW_Ivan"
            },
            "vpc_id": "vpc-0d326fa6df054880c"
          },
          "dependencies": [
            "aws_vpc.ivan_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_Ivan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097084951758:route-table/rtb-0d35d9d6f0e43629c",
            "id": "rtb-0d35d9d6f0e43629c",
            "owner_id": "097084951758",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035bd17664caba179",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_Ivan"
            },
            "tags_all": {
              "Name": "route_table_Ivan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d326fa6df054880c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_Ivan",
            "aws_vpc.ivan_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ivan_SG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097084951758:security-group/sg-013f664f7e9f1152b",
            "description": "SG for exxampe number 2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013f664f7e9f1152b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ivan_SG2",
            "name_prefix": "",
            "owner_id": "097084951758",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d326fa6df054880c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ivan_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097084951758:subnet/subnet-02e6cfd23d3e89afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e6cfd23d3e89afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097084951758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_Ivan"
            },
            "tags_all": {
              "Name": "public_subnet_Ivan"
            },
            "vpc_id": "vpc-0d326fa6df054880c"
          },
          "dependencies": [
            "aws_vpc.ivan_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ivan_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097084951758:vpc/vpc-0d326fa6df054880c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0820c77034e2de589",
            "default_route_table_id": "rtb-011573cb161c0d269",
            "default_security_group_id": "sg-0e5038f9e192f744e",
            "dhcp_options_id": "dopt-01b63a3034854a4b4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d326fa6df054880c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011573cb161c0d269",
            "owner_id": "097084951758",
            "tags": {
              "Name": "Ivan_vpc"
            },
            "tags_all": {
              "Name": "Ivan_vpc"
            }
          }
        }
      ]
    }
  ]
}